--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/image": "^0.15.0",
 		"@astrojs/mdx": "^0.17.0",
+		"@astrojs/prefetch": "^0.1.2",
 		"@astrojs/prism": "^2.0.0",
 		"@astrojs/sitemap": "^1.0.1",
 		"@glidejs/glide": "^3.6.0",
