--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"astro-compress": "^1.1.33",
 		"astro-icon": "^0.8.0",
 		"astro-robots-txt": "^0.4.0",
+		"astro-seo": "^0.7.1",
 		"include-media": "^2.0.0"
 	},
 	"devDependencies": {
