--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/mdx": "^0.17.0",
 		"@astrojs/prefetch": "^0.1.2",
 		"@astrojs/prism": "^2.0.0",
+		"@astrojs/rss": "^2.1.1",
 		"@astrojs/sitemap": "^1.0.1",
 		"@glidejs/glide": "^3.6.0",
 		"astro": "^2.0.14",
