--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Set Registry
+        run: npm set registry https://registry.npmjs.org/
       - name: Install dependencies
         run: npm install
       - name: Generate production files
