--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,9 +15,8 @@ jobs:
       - name: Install latest LTS Node version
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-      - name: Set Registry
-        run: npm set registry https://registry.npmjs.org/
+          node-version: "18.x"
+          check-latest: true
       - name: Install dependencies
         run: npm install
       - name: Generate production files
