build: try cache clearing

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: "18.x"
           check-latest: true
+      - name: Clear npm cache
+        run: npm cache clean --force
       - name: Install dependencies
         run: npm install
       - name: Generate production files
