--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/image": "^0.17.3",
 		"@astrojs/mdx": "^0.19.7",
 		"@astrojs/prism": "^2.1.2",
 		"@astrojs/rss": "^2.4.4",
 		"@astrojs/sitemap": "^2.0.1",
+		"@glidejs/glide": "^3.6.0",
 		"astro": "^2.10.7",
 		"astro-compress": "^2.0.5",
 		"astro-icon": "^0.8.1",
 		"astro-robots-txt": "^0.5.0",
 		"astro-seo": "^0.7.5",
-		"@glidejs/glide": "^3.6.0",
-		"include-media": "^2.0.0"
+		"include-media": "^2.0.0",
+		"sharp": "^0.32.4"
 	},
 	"devDependencies": {
 		"sass": "^1.58.3",
