--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"astro": "^2.10.7",
 		"astro-compress": "^2.0.5",
 		"astro-icon": "^0.8.1",
+		"astro-purgecss": "^2.3.0",
 		"astro-robots-txt": "^0.5.0",
 		"astro-seo": "^0.7.5",
 		"include-media": "^2.0.0",
