--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"astro-robots-txt": "^1.0.0",
 		"astro-seo": "^0.8.0",
 		"include-media": "^2.0.0",
+		"remark-toc": "^9.0.0",
 		"sharp": "^0.32.6"
 	},
 	"devDependencies": {
