--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,8 +18,7 @@ jobs:
           node-version: "18.x"
           check-latest: true
       - name: Install dependencies
-        run: npm install
-        run: npm install --os=linux --cpu=x64 sharp
+        run: npm install --os=linux --cpu=x64
       - name: Generate production files
         run: npm run build
       - name: Deploy files to production environment
