--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,10 +17,8 @@ jobs:
         with:
           node-version: "18.x"
           check-latest: true
-      - name: Install sharp dependency as x64 Linux based
-        run: npm install --os=linux --cpu=x64 sharp
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies as x64 Linux
+        run: npm install --os=linux --cpu=x64
       - name: Generate production files
         run: npm run build
       - name: Deploy files to production environment
