--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/rss": "^4.0.1",
 		"@astrojs/sitemap": "^3.0.3",
 		"@glidejs/glide": "^3.6.0",
+		"@img/sharp-linux-x64": "^0.33.1",
 		"astro": "^4.0.6",
 		"astro-compress": "^2.2.5",
 		"astro-icon": "^0.8.2",
