ci: change again to Linux x64

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,8 +17,8 @@ jobs:
         with:
           node-version: "18.x"
           check-latest: true
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies for Linux x64
+        run: npm install --cpu=x64 --os=linux --libc=musl
       - name: Generate production files
         run: npm run build
       - name: Deploy files to production environment
