--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,9 +13,9 @@ jobs:
       - name: Checkout master branch
         uses: actions/checkout@v2
       - name: Install latest LTS Node version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "lts/*"
           check-latest: true
       - name: Install dependencies
         run: npm install
