feat: upgrade all packages, migrate astro-icon to v1

--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^2.0.1",
-		"@astrojs/partytown": "^2.0.2",
+		"@astrojs/mdx": "^2.1.1",
+		"@astrojs/partytown": "^2.0.4",
 		"@astrojs/prism": "^3.0.0",
-		"@astrojs/rss": "^4.0.1",
-		"@astrojs/sitemap": "^3.0.3",
+		"@astrojs/rss": "^4.0.4",
+		"@astrojs/sitemap": "^3.0.5",
 		"@glidejs/glide": "^3.6.0",
-		"astro": "^4.0.6",
-		"astro-compress": "^2.2.5",
-		"astro-icon": "^0.8.2",
-		"astro-purgecss": "^4.0.0",
+		"@iconify-json/ant-design": "^1.1.14",
+		"@iconify-json/eva": "^1.1.10",
+		"@iconify-json/fontisto": "^1.1.8",
+		"@iconify-json/mdi": "^1.1.64",
+		"@iconify-json/ph": "^1.1.10",
+		"@iconify-json/ri": "^1.1.19",
+		"@iconify-json/simple-icons": "^1.1.90",
+		"astro": "^4.3.0",
+		"astro-compress": "^2.2.8",
+		"astro-icon": "^1.0.4",
+		"astro-purgecss": "^4.1.0",
 		"astro-robots-txt": "^1.0.0",
 		"astro-seo": "^0.8.0",
 		"include-media": "^2.0.0",
 		"remark-toc": "^9.0.0",
-		"sharp": "^0.33.1"
+		"sharp": "^0.33.2"
 	},
 	"devDependencies": {
 		"sass": "^1.58.3",
