--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"@iconify-json/ph": "^1.1.10",
 		"@iconify-json/ri": "^1.1.19",
 		"@iconify-json/simple-icons": "^1.1.90",
+		"@playform/compress": "^0.0.3",
 		"astro": "^4.3.1",
-		"astro-compress": "^2.2.8",
 		"astro-icon": "^1.0.4",
 		"astro-purgecss": "^4.1.0",
 		"astro-robots-txt": "^1.0.0",
