--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"devDependencies": {
 		"pagefind": "^1.1.0",
+		"rehype-accessible-emojis": "^0.3.2",
 		"sass": "^1.77.5",
 		"svgo": "^3.3.2"
 	}
