--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,17 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and Deploy
     steps:
-      - name: Checkout master branch
-        uses: actions/checkout@v4
-      - name: Install latest LTS Node version
+      - uses: actions/checkout@v4
+      - name: Install latest pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+      - name: Install latest LTS Node
         uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
-          check-latest: true
+          cache: 'pnpm'
       - name: Install dependencies
-        run: npm install
-      - name: Generate production files
-        run: npm run build
+        run: pnpm install
+      - name: Generate production build
+        run: pnpm run build
       - name: Deploy files to production environment
         uses: sebastianpopp/ftp-action@releases/v2
         with:
