--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-	"name": "portfolio-astro",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build && npx pagefind --site dist && cp -r dist/pagefind public/",
-		"build-win": "astro build && npx pagefind --site dist && copy /dist/pagefind /public",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/check": "^0.7.0",
-		"@astrojs/mdx": "^3.1.0",
-		"@astrojs/partytown": "^2.1.1",
-		"@astrojs/rss": "^4.0.6",
-		"@astrojs/sitemap": "^3.1.5",
-		"@glidejs/glide": "^3.6.1",
-		"@iconify-json/ant-design": "^1.1.14",
-		"@iconify-json/eva": "^1.1.10",
-		"@iconify-json/fontisto": "^1.1.8",
-		"@iconify-json/mdi": "^1.1.64",
-		"@iconify-json/ph": "^1.1.10",
-		"@iconify-json/ri": "^1.1.19",
-		"@iconify-json/simple-icons": "^1.1.90",
-		"@playform/compress": "^0.0.13",
-		"astro": "^4.10.2",
-		"astro-icon": "^1.1.0",
-		"astro-purgecss": "^4.1.1",
-		"astro-robots-txt": "^1.0.0",
-		"astro-seo": "^0.8.4",
-		"include-media": "^2.0.0",
-		"remark-toc": "^9.0.0",
-		"sharp": "^0.33.2",
-		"typescript": "^5.4.5"
-	},
-	"devDependencies": {
-		"pagefind": "^1.1.0",
-		"rehype-accessible-emojis": "^0.3.2",
-		"sass": "^1.77.5",
-		"svgo": "^3.3.2"
-	}
+  "name": "portfolio-astro",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build && npx pagefind --site dist && cp -r dist/pagefind public/",
+    "build-win": "astro build && npx pagefind --site dist && copy /dist/pagefind /public",
+    "format": "prettier --write .",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.8.1",
+    "@astrojs/mdx": "^3.1.2",
+    "@astrojs/partytown": "^2.1.1",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "@glidejs/glide": "^3.6.2",
+    "@iconify-json/ant-design": "^1.1.16",
+    "@iconify-json/eva": "^1.1.10",
+    "@iconify-json/fontisto": "^1.1.8",
+    "@iconify-json/mdi": "^1.1.67",
+    "@iconify-json/ph": "^1.1.13",
+    "@iconify-json/ri": "^1.1.21",
+    "@iconify-json/simple-icons": "^1.1.109",
+    "@playform/compress": "^0.0.13",
+    "astro": "^4.11.5",
+    "astro-icon": "^1.1.0",
+    "astro-purgecss": "^4.1.1",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.4",
+    "include-media": "^2.0.0",
+    "remark-toc": "^9.0.0",
+    "sharp": "^0.33.4",
+    "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "pagefind": "^1.1.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.0",
+    "rehype-accessible-emojis": "^0.3.2",
+    "sass": "^1.77.8",
+    "svgo": "^3.3.2"
+  }
 }
