ci: add flag to skip frozen lockfile check

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
           node-version: "lts/*"
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Generate production build
         run: pnpm run build
       - name: Deploy files to production environment
