--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.1",
-    "@astrojs/mdx": "^3.1.2",
+    "@astrojs/check": "^0.9.2",
+    "@astrojs/mdx": "^3.1.3",
     "@astrojs/partytown": "^2.1.1",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
@@ -24,7 +24,7 @@
     "@iconify-json/ri": "^1.1.21",
     "@iconify-json/simple-icons": "^1.1.109",
     "@playform/compress": "^0.0.13",
-    "astro": "^4.11.5",
+    "astro": "^4.13.2",
     "astro-icon": "^1.1.0",
     "astro-purgecss": "^4.1.1",
     "astro-robots-txt": "^1.0.0",
@@ -41,5 +41,6 @@
     "rehype-accessible-emojis": "^0.3.2",
     "sass": "^1.77.8",
     "svgo": "^3.3.2"
-  }
+  },
+  "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
 }
