--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Install latest pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: latest
+          version: "9.7.0"
       - name: Install latest LTS Node
         uses: actions/setup-node@v4
         with:
