fix: add missing package

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@iconify-json/ph": "^1.2.1",
     "@iconify-json/ri": "^1.2.1",
     "@iconify-json/simple-icons": "^1.2.7",
+    "@iconify/icons-arcticons": "^1.2.77",
     "@playform/compress": "^0.1.4",
     "astro": "^4.16.0",
     "astro-icon": "^1.1.1",
