fix: wrong installed package name, should be json type instead

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@astrojs/rss": "^4.0.8",
     "@astrojs/sitemap": "^3.2.0",
     "@glidejs/glide": "^3.6.2",
+    "@iconify-json/arcticons": "^1.2.4",
     "@iconify-json/eva": "^1.2.0",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/ph": "^1.2.1",
     "@iconify-json/ri": "^1.2.1",
     "@iconify-json/simple-icons": "^1.2.7",
-    "@iconify/icons-arcticons": "^1.2.77",
     "@playform/compress": "^0.1.4",
     "astro": "^4.16.0",
     "astro-icon": "^1.1.1",
