--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "astro build && npx pagefind --site dist && cp -r dist/pagefind public/",
     "build-win": "astro build && npx pagefind --site dist && copy /dist/pagefind /public",
     "format": "prettier --write .",
-    "preview": "astro preview",
+    "preview": "pnpm i && pnpm run build && astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^3.1.8",
+    "@astrojs/mdx": "^3.1.9",
     "@astrojs/partytown": "^2.1.2",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
@@ -22,11 +22,11 @@
     "@iconify-json/eva": "^1.2.0",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/ph": "^1.2.1",
-    "@iconify-json/ri": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.9",
+    "@iconify-json/ri": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.11",
     "@playform/compress": "^0.1.6",
-    "astro": "^4.16.7",
-    "astro-icon": "^1.1.1",
+    "astro": "^4.16.10",
+    "astro-icon": "^1.1.2",
     "astro-purgecss": "^4.6.1",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
@@ -36,11 +36,11 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "pagefind": "^1.1.1",
+    "pagefind": "^1.2.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "rehype-accessible-emojis": "^0.3.2",
-    "sass": "^1.80.4",
+    "sass": "^1.80.6",
     "svgo": "^3.3.2"
   },
   "packageManager": "pnpm@9.12.2"
