--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.1.0",
+    "@astrojs/mdx": "^4.2.0",
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@glidejs/glide": "^3.7.1",
-    "@iconify-json/arcticons": "^1.2.19",
+    "@iconify-json/arcticons": "^1.2.21",
     "@iconify-json/eva": "^1.2.1",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/ph": "^1.2.2",
     "@iconify-json/ri": "^1.2.5",
-    "@iconify-json/simple-icons": "^1.2.27",
+    "@iconify-json/simple-icons": "^1.2.28",
     "@playform/compress": "^0.1.7",
-    "astro": "^5.4.2",
+    "astro": "^5.5.2",
     "astro-icon": "^1.1.5",
-    "astro-purgecss": "^5.2.1",
+    "astro-purgecss": "^5.2.2",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
     "include-media": "^2.0.0",
@@ -43,5 +43,5 @@
     "sass": "^1.85.1",
     "svgo": "^3.3.2"
   },
-  "packageManager": "pnpm@10.5.2"
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
 }
