fix: nginx configuration so other pages also work

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,19 @@
-
 server {
   listen 5000;
-  server_name localhost;
+  server_name test.gerbenveenhof.nl;
 
   root /usr/share/nginx/html;
   index index.html;
+
+  port_in_redirect off;
+  absolute_redirect off;
 
   location / {
     try_files $uri $uri/ $uri.html =404;
   }
 
   error_page 404 /404.html;
+  location = /404.html {
+    internal;
+  }
 }
