feat: add caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,56 @@
-server {
-  listen 5000;
-  server_name test.gerbenveenhof.nl;
-
-  root /usr/share/nginx/html;
-  index index.html;
-
-  port_in_redirect off;
-  absolute_redirect off;
-
-  location / {
-    try_files $uri $uri/ $uri.html =404;
+http {
+  location ~* \.(?:css|js|svg|jpg|jpeg|png|gif|ico)$ {
+    try_files $uri $uri/ =404;
+    expires 30d;
+    add_header Cache-Control "public, max-age=2592000" always;
+    add_header Vary "Accept-Encoding" always;
   }
 
-  error_page 404 /404.html;
-  location = /404.html {
-    internal;
+  # gzip (built-in)
+  gzip on;
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_comp_level 5;
+  gzip_min_length 256;
+  gzip_buffers 16 8k;
+  gzip_min_length 256;
+  gzip_types
+      text/plain
+      text/css
+      application/json
+      application/javascript
+      text/xml
+      application/xml
+      text/javascript
+      application/rss+xml
+      image/svg+xml;
+
+  map $sent_http_content_type $cacheable {
+      "~*text/css"       1;
+      "~*application/javascript" 1;
+      "~*image/"         1;
+      "~*font/"          1;
+      default            0;
+  }
+
+  server {
+    listen 5000;
+    server_name test.gerbenveenhof.nl;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    port_in_redirect off;
+    absolute_redirect off;
+
+    location / {
+      try_files $uri $uri/ $uri.html =404;
+    }
+
+    error_page 404 /404.html;
+    location = /404.html {
+      internal;
+    }
   }
 }
+
