fix: nginx configuration that broke

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,11 @@
 http {
-  location ~* \.(?:css|js|svg|jpg|jpeg|png|gif|ico)$ {
-    try_files $uri $uri/ =404;
-    expires 30d;
-    add_header Cache-Control "public, max-age=2592000" always;
-    add_header Vary "Accept-Encoding" always;
-  }
+
 
   # gzip (built-in)
   gzip on;
   gzip_vary on;
   gzip_proxied any;
   gzip_comp_level 5;
-  gzip_min_length 256;
   gzip_buffers 16 8k;
   gzip_min_length 256;
   gzip_types
@@ -24,14 +18,10 @@ http {
       text/javascript
       application/rss+xml
       image/svg+xml;
-
-  map $sent_http_content_type $cacheable {
-      "~*text/css"       1;
-      "~*application/javascript" 1;
-      "~*image/"         1;
-      "~*font/"          1;
-      default            0;
-  }
+      font/woff
+      font/woff2
+      application/font-woff
+      application/font-woff2;
 
   server {
     listen 5000;
@@ -45,6 +35,13 @@ http {
 
     location / {
       try_files $uri $uri/ $uri.html =404;
+    }
+
+    location ~* \.(?:css|js|svg|jpg|jpeg|png|gif|ico)$ {
+      try_files $uri $uri/ =404;
+      expires 30d;
+      add_header Cache-Control "public, max-age=2592000" always;
+      add_header Vary "Accept-Encoding" always;
     }
 
     error_page 404 /404.html;
