fix: bug in gzip types

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ gzip_types
     application/xml
     text/javascript
     application/rss+xml
-    image/svg+xml;
+    image/svg+xml
     font/woff
     font/woff2
     application/font-woff
