--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@iconify-json/ri": "^1.2.8",
     "@iconify-json/simple-icons": "^1.2.68",
     "@playform/compress": "^0.2.1",
-    "astro": "^5.17.0",
+    "astro": "^5.17.1",
     "astro-icon": "^1.1.5",
     "astro-purgecss": "^5.3.0",
     "astro-robots-txt": "^1.0.0",
@@ -41,6 +41,11 @@
     "rehype-accessible-emojis": "^0.3.2",
     "sass": "^1.97.3",
     "svgo": "^4.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "lodash": "4.17.23"
+    }
   },
   "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
