--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,54 @@
+# Dependencies
 node_modules
-npm-debug.log
-.dockerignore
+.pnpm-store
+
+# Build outputs
+dist
 .astro
+
+# Git
+.git
+.gitignore
 .github
+
+# IDE
 .vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# Environment & Config
+.env
+.env.*
+!.env.example
+
+# Docker
+Dockerfile
+.dockerignore
+docker-compose.yml
+
+# Documentation
+README.md
 Readme.md
+*.md
+!src/**/*.md
+!src/**/*.mdx
+
+# Testing
+coverage
+.nyc_output
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Misc
+*.tsbuildinfo
